--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack -p --config webpack.config.prod.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "jest",
+    "watch": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.14.0",
@@ -28,6 +31,7 @@
     "css-loader": "^0.26.2",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.0.0",
+    "jest": "^19.0.2",
     "react-hot-loader": "^1.3.0",
     "redux-logger": "^2.8.1",
     "style-loader": "^0.13.2",
