--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Asynchronous Node Definition",
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack -p --config webpack.config.prod.js",
+    "build": "webpack -p --config webpack.config.reactlib.js",
     "start": "node server.js",
     "test": "jest",
     "watch": "npm test -- --watch"
