--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "and",
+  "name": "dnd",
   "version": "0.0.0",
-  "description": "Asynchronous Node Definition",
+  "description": "Dependent Nodes Definition",
   "main": "src/index.js",
   "scripts": {
     "build": "webpack -p --config webpack.config.reactlib.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ubery/and.git"
+    "url": "git+https://github.com/ubery/dnd.git"
   },
   "author": "Bartosz Lorek",
   "license": "MIT",
@@ -19,7 +19,8 @@
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^5.0.3",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
