--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ubery/dnd.git"
+    "url": "git+https://github.com/bartoszlorek/dnd.git"
   },
   "author": "Bartosz Lorek",
   "license": "MIT",
